--- a/foundation/foundation.vcxproj.filters
+++ b/foundation/foundation.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="..\src\foundation\string.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\foundation\axisaligneddox.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\foundation\exception.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -94,6 +91,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\foundation\vector4.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\foundation\axisalignedbox.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
