--- a/foundation/foundation.vcxproj
+++ b/foundation/foundation.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="src\foundation\frustum.h" />
     <ClInclude Include="src\foundation\math.h" />
     <ClInclude Include="src\foundation\matrix44.h" />
+    <ClInclude Include="src\foundation\metaprop.h" />
     <ClInclude Include="src\foundation\plane.h" />
     <ClInclude Include="src\foundation\prerequest.h" />
     <ClInclude Include="src\foundation\quaternion.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="src\foundation\frustum.cpp" />
     <ClCompile Include="src\foundation\math.cpp" />
     <ClCompile Include="src\foundation\matrix44.cpp" />
+    <ClCompile Include="src\foundation\metaprop.cpp" />
     <ClCompile Include="src\foundation\plane.cpp" />
     <ClCompile Include="src\foundation\quaternion.cpp" />
     <ClCompile Include="src\foundation\string.cpp" />
