--- a/foundation/foundation.vcxproj.filters
+++ b/foundation/foundation.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="src\foundation\vector4.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\foundation\metaprop.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\foundation\axisalignedbox.cpp">
@@ -97,6 +100,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\foundation\vector4.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\foundation\metaprop.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
