Modify resource management for meshes
 In the previous architecture of scene resource management, GameFriends imports
materials and meshes from .fbx file. Now, it is modified to import from .metaprop
files (.mesh for meshes, .shade and .material for materials).
 Note that I found a bug of .metaprop importing. An empty property is imported
as array{""}!. It is easy miss and fixed now!.

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -146,16 +146,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\engine\meshload.cpp" />
     <ClCompile Include="..\src\engine\pixelformat.cpp" />
     <ClCompile Include="..\src\engine\soundclipload.cpp" />
     <ClCompile Include="..\src\engine\codec.cpp" />
-    <ClCompile Include="..\src\engine\fbximport.cpp" />
     <ClCompile Include="..\src\engine\materialload.cpp" />
     <ClCompile Include="..\src\engine\resource.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\engine\codec.h" />
-    <ClInclude Include="..\src\engine\fbximport.h" />
     <ClInclude Include="..\src\engine\pixelformat.h" />
     <ClInclude Include="..\src\engine\resource.h" />
   </ItemGroup>
