--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="..\src\engine\filesystem.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\engine\logging.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\engine\codec.h">
@@ -40,6 +43,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\engine\filesystem.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\engine\logging.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
