--- a/foundation/foundation.vcxproj.filters
+++ b/foundation/foundation.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClInclude Include="src\foundation\metaprop.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="src\foundation\uri.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\foundation\axisalignedbox.cpp">
@@ -103,6 +106,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\foundation\metaprop.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\foundation\uri.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
